--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 
             </div>
             <ul class="faq__questions">
-                <li class="faq__questions__item faq__questions__item--is-open">
+                <li class="faq__questions__item ">
                     <div data-tab-question class="faq__questions__item__question subtitle">
                         Perguta 1
                     </div>
@@ -185,6 +185,34 @@
                     </div>
                 </li>
 
+            </ul>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer__container">
+            <div class="footer__container__row">
+                <a href="#" class="footer__row__link textSmall">Agora na HBO MAX</a>
+                <a href="#" class="footer__row__link textSmall" >Em Breve</a>
+                <a href="#" class="footer__row__link textSmall">Filme em destaque</a>
+                <a href="#" class="footer__row__link textSmall">Séries</a>
+                <a href="#" class="footer__row__link textSmall">Ajuda</a>
+            </div>
+            <ul class="footer_links">
+                <li class="footer__links__item">
+                    <a href="" class="textSmall">Privacidade</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="textSmall">Termos de uso</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="textSmall">Comunicado de imprensa</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="textSmall">Contatos de imprensa</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="textSmall">Gerenciar preferncias</a>
+                </li>
             </ul>
         </div>
     </section>
